Update administration instructions